made group-nav comments

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- ----- hero ------ -->
     <section class="banner">
         <div class="content">
-            <h1>Resource Mark</h1>
+            <h1>Resources Mark</h1>
             <h3>A curated list of resources for Learners and Front-End Developers.</h3>
         </div>
 
@@ -63,9 +63,9 @@
                     <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
 
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <!-- <li><a href="" class="group-nav-link">
                     <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
-                </a></li>
+                </a></li> -->
             <li><a href="#reading" class="group-nav-link">
                     <ion-icon name="book-outline"></ion-icon>Reading
                     <!--   Completed   -->
@@ -95,9 +95,9 @@
             <li><a href="#inspiration" class="group-nav-link">
                     <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
-            <li><a href="#templates" class="group-nav-link">
+            <!-- <li><a href="#templates" class="group-nav-link">
                     <ion-icon name="newspaper-outline"></ion-icon>Templates
-                </a></li>
+                </a></li> -->
             <li><a href="#graphics" class="group-nav-link">
                     <ion-icon name="images-outline"></ion-icon>UI Graphics
                 </a></li>
@@ -113,9 +113,9 @@
             <li><a href="#deployment" class="group-nav-link">
                     <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <!-- <li><a href="" class="group-nav-link">
                     <ion-icon name="bookmarks-outline"></ion-icon>More Useful
-                </a></li>
+                </a></li> -->
         </ul>
         <!-- </div> -->
     </nav>
@@ -2780,7 +2780,8 @@
                                 <img src="/resources/icons/patterncss.jpg" alt="pattern.css "></div>
                             <h3>pattern.css </h3>
                             <p>CSS only library to fill your empty background with beautiful patterns. </p>
-                            <a href="https://bansal.io/pattern-css" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://bansal.io/pattern-css" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ----------------
