added keywords tag

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
     <!-- ---- Lato Font ---- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet" <!-- ------
-        favicon ------ -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
+    <!-- ------avicon ------ -->
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <meta name="robots" content="index, follow">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- -------------------- -->
-    <title>Resourcesmark</title>
+    <title>ResourcesMark</title>
     <meta name="description"
         content="ResourcesMark is website containing a curated list of Resources for Learners and Front-End Developers. Add a resource if you think that's missing.">
+    <meta name="keywords" content="ResourcesMark, resourcesmark, resources for web developers">
+    <meta name="author" content="Abdullah-webdev">
+
 </head>
 
 <body>
