added some typogrpahy resources

--- a/index.html
+++ b/index.html
@@ -2022,6 +2022,28 @@
                                 </ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/fontpair.png" alt="Fontpair"></div>
+                            <h3>FontPair</h3>
+                            <p>Font Pair helps designers pair Google Fonts together. Beautiful Google Font combinations
+                                and pairs.</p>
+                            <a href="https://fontpair.co/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/fontjoy.jpeg" alt="FontJoy"></div>
+                            <h3>Fontjoy</h3>
+                            <p>Fontjoy helps designers choose the best font combinations. Mix and match different fonts
+                                for the perfect pairing.</p>
+                            <a href="https://fontjoy.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
 
 
                     </article>
@@ -2892,15 +2914,7 @@
                             </a>
                         </div>
 
-                        <!-- ------------ card ---------------- -->
-                        <div class="card">
-                            <div class="icon-box">
-                                <img src="/resources/icons/" alt=""></div>
-                            <h3></h3>
-                            <p></p>
-                            <a href="" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
-                            </a>
-                        </div>
+
 
                     </article>
                 </section>
