--- a/index.html
+++ b/index.html
@@ -3530,22 +3530,29 @@
         </article>
     </main>
     <footer class="container">
-        <div class="footer--text">
-            <p>Designed and Developed with &hearts; by <a href="#" class="footer-link">Abdullah Sajjad</a></p>
+        <div class="footer-flex">
+            <div class="footer--text">
+                <p>&copy; 2021. Designed and Developed with &hearts; by <a href="https://abdullahwebdev.netlify.app/"
+                        class="footer-link">Abdullah Sajjad</a></p>
+            </div>
+            <div class="footer--social-links">
+                <a href="https://www.facebook.com/profile.php?id=100047766791619">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+                <a href="https://github.com/Abdullah-webdev/">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a>
+                <a href="https://twitter.com/Abdullah_webdev">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+                <a href="https://codepen.io/abdullah-webdev/">
+                    <ion-icon name="logo-codepen"></ion-icon>
+                </a>
+            </div>
         </div>
-        <div class="footer--social-links">
-            <a href="https://www.facebook.com/profile.php?id=100047766791619">
-                <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-            <a href="https://github.com/Abdullah-webdev/">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
-            <a href="https://twitter.com/NoName17228303">
-                <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-            <a href="https://codepen.io/abdullah-webdev/">
-                <ion-icon name="logo-codepen"></ion-icon>
-            </a>
+        <div class="footer--text footer-desc">
+            <p>I collected all these resources form reading many articles and visiting many sites. I hope that you guys
+                liked it and this website will help you.</p>
         </div>
     </footer>
 
