added new resources

--- a/index.html
+++ b/index.html
@@ -857,7 +857,17 @@
                                 target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
-
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/tylerpotts.jpeg" alt=""></div>
+                            <h3>Tyler Potts</h3>
+                            <p>If you want to learn about Game or Web Development, JavaScript, CSS, PHP or anything else
+                                relating to programming then subscribe to the channel.</p>
+                            <a href="https://www.youtube.com/c/TylerPotts/featured" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -905,9 +915,6 @@
                                 target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
-
-
-
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -1001,6 +1008,7 @@
                                 target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
+
 
 
                         <!--
@@ -2126,6 +2134,18 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
+
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/angular.png"></div>
+                            <h3>Angular</h3>
+                            <p>Angular is a TypeScript-based open-source web application framework led by the Angular
+                                Team at Google and by a community of individuals and corporations.</p>
+                            <a href="https://angular.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -2404,16 +2424,6 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/color-space-logo.png" alt="ColorSpace Gradient"></div>
-                            <h3>ColorSpace Gradient</h3>
-                            <p>Another great tool from ColorSpace, but this time to help create CSS gradients.</p>
-                            <a href="https://mycolor.space/gradient" class="visit-btn" target="blank">Visit<ion-icon
-                                    name="open-outline"></ion-icon>
-                            </a>
-                        </div>
-                        <!-- ------------ card ---------------- -->
-                        <div class="card">
-                            <div class="icon-box">
                                 <img src="/resources/icons/cssgradientcolors.svg" alt="CSS Gradient"></div>
                             <h3>CSS Gradient</h3>
                             <p>Another brilliant gradient generator for you to play around with. CSS Gradient is also an
@@ -2446,6 +2456,27 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/color-space-logo.png" alt="ColorSpace Gradient"></div>
+                            <h3>ColorSpace Gradient</h3>
+                            <p>Another great tool from ColorSpace, but this time to help create CSS gradients.</p>
+                            <a href="https://mycolor.space/gradient" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/colorinspo.svg" alt=""></div>
+                            <h3>Colorsinspo</h3>
+                            <p>Colorsinspo is all in one resource to find everything about colors with extreme ease.</p>
+                            <a href="https://colorsinspo.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
