--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <input type="text" name="resource-url" id="" placeholder="Resource URL">
             <button type="submit">Submit</button>
         </form>
-        <p>Add a Resource (if you have any in mind)</p>
+        <p>Add a Resource (if you have any in mind). New submissions are added weekly.</p>
     </section>
     <nav class="group-nav" id="category-nav">
         <!-- <div class="container"> -->
