--- a/index.html
+++ b/index.html
@@ -2,6 +2,36 @@
 <html lang="en">
 
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S34N1HKVSX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-S34N1HKVSX');
+    </script>
+    <!-- ---------------------------------------------------------- -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECGQ98R208"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ECGQ98R208');
+    </script> -->
+    <!-- ---------------------------------------------------------- -->
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/resources/css/style.css">
@@ -21,8 +51,9 @@
     <!-- -------------------- -->
     <title>ResourcesMark</title>
     <meta name="description"
-        content="ResourcesMark is website containing a curated list of Resources for Learners and Front-End Developers. Add a resource if you think that's missing.">
-    <meta name="keywords" content="ResourcesMark, resourcesmark, resources for web developers">
+        content="ResourcesMark is website containing a curated list of Resources for Learners and Developers. Add a resource if you think that's missing.">
+    <meta name="keywords"
+        content="ResourcesMark, resourcesmark, resources for web developers, resourcesmark resources for developers">
     <meta name="author" content="Abdullah-webdev">
 
 </head>
@@ -46,7 +77,7 @@
     <section class="banner">
         <div class="content">
             <h1>Resources Mark</h1>
-            <h3>A curated list of resources for Learners and Front-End Developers.</h3>
+            <h3>A curated list of resources for Learners and Developers.</h3>
         </div>
 
         <form action="https://usebasin.com/f/e924d14cf4be" method="POST" class="sumbit-form">
