--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </script> -->
     <!-- ---------------------------------------------------------- -->
 
+    <!-- \\ Ads Code -->
+    <script data-ad-client="ca-pub-2235655211514716" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- ----------------------------------- -->
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -3595,7 +3600,7 @@
         <div class="footer-flex">
             <div class="footer--text">
                 <p>&copy; 2021. Designed and Developed with &hearts; by <a href="https://abdullahwebdev.netlify.app/"
-                        class="footer-link">Abdullah Sajjad</a></p>
+                        class="footer-link">Abdullah Sajjad</a>. Share this site.</p>
             </div>
             <div class="footer--social-links">
                 <a href="https://www.facebook.com/profile.php?id=100047766791619">
